# ARIAMigration-Databrick

./: README.md  Untitled Notebook 2025-01-24 21_48_51.ipynb  Working Azure Log Analytics API for AAT.ipynb  azure-pipelines.yaml  azure-pipelines.yml  azure-pipelines_sbox_build.yml  databricks.yaml  databricks.yml  pr-pipeline.yml  pyproject.toml  pytest.ini
ARIA_DABs/: .gitignore  README.md  databricks.yml  pyproject.toml
ARIA_DABs/Active_Functions/: AwaitingEvidenceRespondant_a.py
ARIA_DABs/resources/clusters/: cluster.yml  instance_pool.yml
ARIA_DABs/resources/pipelines/: ARIA_ARCHIVE_BAILS.yml  ARIA_ARCHIVE_UC.yml  PL_ARIADM_ACTIVE_APPEALS.yml  PL_ARIADM_ACTIVE_APPEALSUBMITTED_GOLD.yml  PL_ARIADM_ACTIVE_APPEALS_BRONZE.yml  PL_ARIADM_ACTIVE_APPEALS_BRONZE_SILVER.yml  PL_ARIADM_ACTIVE_APPEALS_CASE_LINKING.yml  PL_ARIADM_ACTIVE_APPEALS_CDAM_HTML.yml  PL_ARIADM_ACTIVE_APPEALS_SILVER.yml  PL_ARIADM_ACTIVE_AWAITINGRESPONDENTEVIDENCEA_GOLD.yml  PL_ARIADM_ACTIVE_AWAITINGRESPONDENTEVIDENCEB_GOLD.yml  PL_ARIADM_ACTIVE_CASEUNDERREVIEW_GOLD.yml  PL_ARIADM_ACTIVE_DECIDED_A_GOLD.yml  PL_ARIADM_ACTIVE_DECIDED_B_GOLD.yml  PL_ARIADM_ACTIVE_DECISION_GOLD.yml  PL_ARIADM_ACTIVE_ENDED_GOLD.yml  PL_ARIADM_ACTIVE_FTPA_DECIDED_GOLD.yml  PL_ARIADM_ACTIVE_FTPA_SUBMITTED_A_GOLD.yml  PL_ARIADM_ACTIVE_FTPA_SUBMITTED_B_GOLD.yml  PL_ARIADM_ACTIVE_LISTING_GOLD.yml  PL_ARIADM_ACTIVE_PAYMENTPENDING_GOLD.yml  PL_ARIADM_ACTIVE_PREPAREFORHEARING_GOLD.yml  PL_ARIADM_ACTIVE_REASONFORAPPEALSUBMITTED_GOLD.yml  PL_ARIADM_ACTIVE_REMITTED_GOLD.yml  PL_ARIADM_ARM_APPEALS.yml  PL_ARIADM_ARM_BAILS.yml  PL_ARIADM_ARM_FPA.yml  PL_ARIADM_ARM_FTA.yml  PL_ARIADM_ARM_JOH.yml  PL_ARIADM_ARM_SBAIL.yml  PL_ARIADM_ARM_TD.yml  PL_ARIADM_ARM_UTA.yml  PL_JOH_test_pipeline_ara.yml
ARIA_DABs/resources/workflows/: active_data_transformation_job.yml  active_publish_results_event_databricks_job.yml  active_republish_events_databricks_job.yml  appealSubmitted_payload_databricks_job.yml  archive_republish_events_databricks_job.yml  awaitingRespondentEvidenceA_payload_databricks_job.yml  awaitingRespondentEvidenceB_payload_databricks_job.yml  caseUnderReview_payload_databricks_job.yml  case_linking_databricks_job.yml  case_linking_results_databricks_job.yml  ccd_call_result_databricks_job.yml  cdam_databricks_job.yml  cdam_results_databricks_job.yml  db_wf_active_paymentPending  db_wf_active_paymentPending.yml  db_wf_apl_fpa_receive.yml  db_wf_apl_fpa_receive_job  db_wf_apl_fpa_send.yml  db_wf_apl_fta_receive.yml  db_wf_apl_fta_recieve.yml  db_wf_apl_fta_send.yml  db_wf_apl_uta_receive.yml  db_wf_apl_uta_send.yml  db_wf_bail_receive.yml  db_wf_bail_reprocessing.yml  db_wf_bail_send.yml  db_wf_joh_receive.yml  db_wf_joh_recieve.yml  db_wf_joh_send.yml  db_wf_sbail_receive.yml  db_wf_sbail_send.yml  db_wf_td_receive.yml  db_wf_td_send.yml  decided_a_payload_databricks_job.yml  decided_b_payload_databricks_job.yml  decision_payload_databricks_job.yml  ended_payload_databricks_job.yml  ftpa_decided_payload_databricks_job.yml  ftpa_submitted_a_payload_databricks_job.yml  ftpa_submitted_b_payload_databricks_job.yml  (+9 more)
ARIA_DABs/shared_functions/: DQRules.py  appealSubmitted.py
Databricks/ACTIVE/APPEALS/: ARIADM_ACTIVE_APPEALS_BRONZE.ipynb  ARIADM_ACTIVE_APPEALS_BRONZE.py  ARIADM_ACTIVE_APPEALS_SILVER.ipynb  BRONZE_ACTIVE_APPEALS.ipynb  BRONZE_RECORD_CLONING.ipynb  GOLD_ACTIVE_CASE_LINKING.ipynb  GOLD_APPEALS_SUBMITTED_JSON.ipynb  GOLD_APPEAL_SUBMITTED_JSON.ipynb  GOLD_AWAITING_EVIDENCE_RESPONDENT_A_JSON.ipynb  GOLD_AWAITING_EVIDENCE_RESPONDENT_B_JSON.ipynb  GOLD_CASE_UNDER_REVIEW_JSON.ipynb  GOLD_DECIDED_A_JSON.ipynb  GOLD_DECIDED_B_JSON.ipynb  GOLD_DECISION_JSON.ipynb  GOLD_ENDED_JSON.ipynb  GOLD_FTPA_DECIDED_JSON.ipynb  GOLD_FTPA_SUBMITTED_A_JSON.ipynb  GOLD_FTPA_SUBMITTED_B_JSON.ipynb  GOLD_LISTING_JSON.ipynb  GOLD_PAYMENT_PENDING_JSON.ipynb  pyproject.toml  (+10 more)
(+779 files in other folders)
