[project]
name = "shared-functions"
version = "0.6.6"
description = "Shared functions for ARIA ARCHIVE + ACTIVE cases"
authors = [
    {name = "Andrew McDevitt"},
    {name = "Ara Islam"},
    {name = "Naveen Sriram"}
]
requires-python = ">=3.9"
dependencies = [
    "pycountry",
    "uk-postcodes-parsing",
    "confluent-kafka",
    "azure-eventhub",
    "azure-storage-blob",
    "aiohttp",
    "pyspark"
]

[project.scripts]
main = "shared_functions.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_functions"]

#shared_functions in active. start only active. use shared_functions to start 
[tool.ruff]
include = ["Databricks/**/*.py", "Databricks/**/*.ipynb", "AzureFunctions/**/*.py", "AzureFunctions/**/*.ipynb"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"

#[lint.per-file-ignores]
#"Databricks/**/*.py" = ["F405"] #dbutils, spark. throwing errors in databricks notebooks
#"AzureFunctions/**/*.ipynb" = ["F821", "E999"] #Using * is throwing an error from imports #invalid syntax (eg SQL commands in spark.sql)
