[project]
name = "shared-functions"
version = "0.5.2"
description = "Shared functions for ARIA ACTIVE cases"
authors = [
    {name = "Andrew McDevitt"},
    {name = "Ara Islam"},
    {name = "Naveen Sriram"}
]
requires-python = ">=3.9"
dependencies = [
    "pycountry",
    "uk-postcodes-parsing",
    "confluent-kafka",
]

[project.scripts]
main = "shared_functions.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_functions"]
