[project]
name = "shared-functions"
version = "0.6.4"
description = "Shared functions for ARIA ACTIVE cases"
authors = [
    {name = "Andrew McDevitt"},
    {name = "Ara Islam"},
    {name = "Naveen Sriram"}
]
requires-python = ">=3.9"
dependencies = [
    "pycountry",
    "uk-postcodes-parsing",
    "confluent-kafka",
    "azure-eventhub",
    "setuptools",
    "azure-storage-blob",
    "aiohttp",
    "pyspark",
    "logging"
]

[project.scripts]
main = "shared_functions.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_functions"]
